--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ flake8-pyproject = "^1.2.3"
 cohesion = "^1.1.0"
 black = "^23.3.0"
 mypy = "^1.2.0"
+ptpython = "^3.0.29"
+pdbpp = "^0.10.3"
 
 [build-system]
 requires = ["poetry-core"]
