--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ packages = [{ include = "be_task_ca" }]
 python = "^3.11"
 sqlalchemy = "^2.0.11"
 psycopg2 = "^2.9.6"
-fastapi = "^0.95.1"
+fastapi = "^0.115.4"
 uvicorn = "^0.22.0"
+pydantic = "^2.10.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -25,6 +26,8 @@ black = "^23.3.0"
 mypy = "^1.2.0"
 ptpython = "^3.0.29"
 pdbpp = "^0.10.3"
+httpx = "^0.27.2"
+faker = "^33.0.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -48,3 +51,15 @@ count = true
 
 [tool.mypy]
 #plugins = "sqlalchemy.ext.mypy.plugin"
+
+[tool.pytest.ini_options]
+markers = [
+    # Tests that are integrated with an external resource.
+    # Here they require:
+    # - running Docker Compose
+    # - applying the DB schema
+    # - running the app locally
+    # TODO have a makefile like [this](https://github.com/butla/portfolio/blob/master/demo-projects/python-backend/Makefile#L21)
+    # to make running them easy. s
+    "integrated",
+]
