--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2 = "^2.9.6"
 fastapi = "^0.115.4"
 uvicorn = "^0.22.0"
 pydantic = "^2.10.1"
+tenacity = "^9.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
